--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Mediasoup SFU Server and Client",
   "main": "server.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node server/server.js",
     "build": "webpack"
   },
   "author": "",
